<resources>
    <string name="app_name">Platform For Schoolchildren</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Main page</string>
    <string name="email">email</string>
    <string name="password">введите пароль</string>
    <string name="or_googleGmail">или через Google</string>
    <string name="login_google">Войти через Google</string>
    <string name="register">Регистрация</string>
    <string name="register2">Зарегистрируйтесь</string>
    <string name="name">Имя</string>
    <string name="your_name">Ваше Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="Gmail">Электронная почта</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="create_password">Пароль</string>
    <string name="create_password2">Придумайте пароль</string>
    <string name="forgot_password"><u>забыли пароль?</u></string>
    <string name="toggle">Union vector</string>
    <string name="your_last_name">Ваше фамилия</string>
    <string name="resume">Продолжить</string>
    <string name="conditions_agreement">Нажимая на кнопку, я соглашаюсь на обработку персональных данных</string>
    <string name="have_an_account">У вас уже есть аккаунт?<a href="">Войти</a> </string>
    <string name="haveAnAccount">У вас уже есть аккаунт?</string>
    <string name="do_you_have_an_account">У вас еще нет аккаунта?</string>
    <string name="account_enter"><u>Войти</u></string>
    <string name="account_enter2">Войти</string>
    <string name="school_number">Номер школы</string>
    <string name="klass">Класс</string>
    <string name="area">Область</string>
    <string name="number_your_school">Номер вашей школы</string>
    <string name="your_class">Ваш класс</string>
    <string name="your_area">Ваш область</string>
    <string name="login">Вход в аккаунт</string>
    <string name="your_password">Ваш пароль</string>
    <string name="to_send">Отправить</string>
    <string name="send_to_mail">Введите почту, и мы вышлем ссылку для восстановления доступа</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="name_school">Название школы</string>
    <string name="name_your_school">Название вашей школы</string>

</resources>