<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".presentation.fragments.RegForSchoolchildrenFragment">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/school_number"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/num_school_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray_1"
        app:endIconMode="clear_text"
        app:endIconTint="@color/ed_txt_ic_color"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/num_school_edText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_your_school"
            android:inputType="text"
            android:singleLine="true"
            android:textColorHint="@color/gray_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/klass"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/class_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray_1"
        app:endIconMode="clear_text"
        app:endIconTint="@color/ed_txt_ic_color"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/class_edText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_class"
            android:inputType="text"
            android:singleLine="true"
            android:textColorHint="@color/gray_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/area_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray_1"
        app:endIconMode="clear_text"
        app:endIconTint="@color/ed_txt_ic_color"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/area_edText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_area"
            android:inputType="text"
            android:singleLine="true"
            android:textColorHint="@color/gray_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        android:enabled="false"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/register"
        android:textSize="16sp"
        app:cornerRadius="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conditions_agreement"
        android:textColor="@color/gray_1"
        android:layout_marginHorizontal="30dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haveAnAccount"
            android:textColor="@color/gray_1"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/account_enter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:text="@string/account_enter"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"/>
    </LinearLayout>


</LinearLayout>