<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".presentation.fragments.ForgotPasswordFragment">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/send_to_mail"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Gmail"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray_1"
        app:endIconMode="clear_text"
        app:endIconTint="@color/ed_txt_ic_color"
        app:helperTextTextColor="@color/error_color"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_ed_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_gmail_com"
            android:inputType="textWebEmailAddress"
            android:singleLine="true"
            android:textColorHint="@color/gray_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/to_send"
        android:textSize="16sp"
        app:cornerRadius="10dp" />

</LinearLayout>